migrate rest template to rest client
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier.pro@gmail.com>